--- a/saturday2/.classpath
+++ b/saturday2/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/[김재원]AWS웹개발과정/2. 리눅스 설치 &amp; 오라클 DB/ojdbc8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
