--- a/saturday2/.classpath
+++ b/saturday2/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/AdoptOpenJDK 11 [11.0.11]">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/[김재원]AWS웹개발과정/2. 리눅스 설치 &amp; 오라클 DB/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="/Users/jaewon/Downloads/ojdbc8-21.5.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
